Prepare for v1.3.0 deployment

--- a/v1.2.0_CHECKLIST.md
+++ b/v1.2.0_CHECKLIST.md
@@ -24,11 +24,11 @@ This checklist tracks progress on v1.2.0 priorities: website monitoring, mobile 
 - Simulate mobile analyze snapshots: detailed analysis with crash reports and traces
 
 **Acceptance Criteria:**
-- [ ] `mobile_config.jsonl`: Valid mobile app configurations
-- [ ] `mobile_catalog.jsonl`: Catalog of mobile apps
-- [ ] `mobile_metrics.jsonl`: Time-series metrics for mobile apps
-- [ ] `mobile_analyze.jsonl`: Analysis snapshots with crash data
-- [ ] All files pass validation and cross-file consistency
+- [x] `mobile_config.jsonl`: Valid mobile app configurations
+- [x] `mobile_catalog.jsonl`: Catalog of mobile apps
+- [x] `mobile_metrics.jsonl`: Time-series metrics for mobile apps
+- [x] `mobile_analyze.jsonl`: Analysis snapshots with crash data
+- [x] All files pass validation and cross-file consistency
 
 **Effort:** Medium (1–2 weeks)
 
